welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: '(' expected but '{' found.
  		} else if {
                          ^alarmClock:14: error: illegal start of simple expression
		}
                ^