welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if (vacation){
    if ((day>=1)&&(day<=5)){
    	return "10:00"
    } else {
    		return "off"
    }
  } else if (!vacation){
    	if ((day>=1)&&(day<=5)){
    		return "7:00"
  		} else if {
    			return "10:00"
  		}
		}
}
